--- a/post/2025-04-15-unit01/nano-gpt/Genome_Language_Model_Spring_2025.ipynb
+++ b/post/2025-04-15-unit01/nano-gpt/Genome_Language_Model_Spring_2025.ipynb
@@ -5,12 +5,16 @@
       "metadata": {},
       "source": [
         "---\n",
-        "title: Genomic language model training with nanoGPT\n",
+        "title: Genomic language model training with nanoGPT - jupyter version\n",
         "author: Henry Raeder\n",
         "date: 2025-04-22\n",
         "categories:\n",
         "    - notebook\n",
         "    - gene46100\n",
+        "description: Henry's genomic language model trained on human reference genome with  nanogpt\n",
+        "date-modified: last-modified\n",
+        "draft: true\n",
+        "eval: false\n",
         "---"
       ]
     },
@@ -2604,11 +2608,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "gene46100",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.9"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
