--- a/post/2025-03-25-unit00/index.qmd
+++ b/post/2025-03-25-unit00/index.qmd
@@ -94,6 +94,7 @@ pip install -r requirements-gene46100.txt
 Follow instructions in https://thedatasavvycorner.com/blogs/08-quarto-conda-en copied to /DRAFTS/2025-02-20-testin/08-quarto-conda-env.qmd
 
 Below is a shortened version of the instructions when you already have a conda environment.
+
 ```{{bash}}
 conda activate gene46100
 pip install nbclient nbformat
@@ -101,6 +102,7 @@ pip install nbclient nbformat
 # Use conda to install the nb_conda_kernels package. This is used to manage python jupyter kernels for notebooks.
 
 conda install nb_conda_kernels
+## in new install I needed conda install nb_conda_kernels jupyter_server
 
 # Copy the path returned from the below command
 jupyter --config-dir
