--- a/post/2025-05-01-unit03/borzoi_personal_gen_prediction.ipynb
+++ b/post/2025-05-01-unit03/borzoi_personal_gen_prediction.ipynb
@@ -5,9 +5,9 @@
       "metadata": {},
       "source": [
         "---\n",
-        "title: \"Borzoi prediction from personal genome\"\n",
+        "title: \"Borzoi prediction from personal genome - jupyter notebook\"\n",
         "author: \"Sofia Salazar\"\n",
-        "date: \"2025-05-05\"\n",
+        "date: \"2023-09-24\"\n",
         "description: 'Using Borzoi for predicting on a personal genome, derived from VCF'\n",
         "format:\n",
         "  html:\n",
